<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/highscore_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/ScoreTheme"
        android:text="@string/label_highscore"
        app:layout_constraintStart_toStartOf="@+id/theme_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/ScoreTheme"
        app:layout_constraintStart_toStartOf="@+id/control_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/your_score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/label_your_score"
        android:textAppearance="@style/ScoreTheme"
        app:layout_constraintStart_toStartOf="@+id/theme_label"
        app:layout_constraintTop_toBottomOf="@+id/highscore_label" />

    <TextView
        android:id="@+id/your_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAppearance="@style/ScoreTheme"
        app:layout_constraintStart_toStartOf="@+id/highscore"
        app:layout_constraintTop_toBottomOf="@+id/highscore" />

    <TextView
        android:id="@+id/control_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_control"
        android:textAppearance="@style/ScoreTheme"
        app:layout_constraintEnd_toEndOf="@+id/control_group"
        app:layout_constraintStart_toStartOf="@+id/control_group"
        app:layout_constraintTop_toTopOf="@+id/theme_label" />

    <TextView
        android:id="@+id/theme_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_theme"
        android:textAppearance="@style/ScoreTheme"
        app:layout_constraintEnd_toEndOf="@+id/themes_group"
        app:layout_constraintStart_toStartOf="@+id/themes_group"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <RadioGroup
        android:id="@+id/themes_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/ScoreTheme"
        app:layout_constraintEnd_toStartOf="@+id/control_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_label">

        <RadioButton
            android:id="@+id/theme_grass_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onThemeSelected"
            android:textAppearance="@style/ScoreTheme"
            android:text="@string/game_theme_grass" />

        <RadioButton
            android:id="@+id/theme_water_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onThemeSelected"
            android:textAppearance="@style/ScoreTheme"
            android:text="@string/game_theme_water" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/control_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/ScoreTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/themes_group"
        app:layout_constraintTop_toTopOf="@+id/themes_group">

        <RadioButton
            android:id="@+id/control_buttons_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onControlSelected"
            android:textAppearance="@style/ScoreTheme"
            android:text="@string/game_controls_buttons" />

        <RadioButton
            android:id="@+id/control_swype_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onControlSelected"
            android:textAppearance="@style/ScoreTheme"
            android:text="@string/game_controls_swype" />

        <RadioButton
            android:id="@+id/control_tilt_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onControlSelected"
            android:textAppearance="@style/ScoreTheme"
            android:text="@string/game_controls_tilt" />
    </RadioGroup>

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="#505050"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_score_label" />

</androidx.constraintlayout.widget.ConstraintLayout>